--- a/pom.xml
+++ b/pom.xml
@@ -163,6 +163,11 @@
 			<artifactId>commons-collections</artifactId>
 			<version>3.2.1</version>
 		</dependency>
+		<dependency>
+		   <groupId>org.codehaus.jackson</groupId>
+		   <artifactId>jackson-mapper-asl</artifactId>
+		   <version>1.9.10</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
